--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -5,11 +5,19 @@
     font-family: $stylizedFont;
 }
 
+.navbar-wrapper{
+    position: relative;
+}
+
 .nav-bar{
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    height: 70px;
+    position: fixed;
+    background-color: $main-bg-color;
+
 }
 
 .nav-item{
@@ -20,4 +28,18 @@
 
 .nav-logo{
     width: 150px;
+}
+
+.going-up{
+    transform: translateY(0);
+    transition: transform 0.5s ease-in-out;
+}
+
+.going-down{
+    transform: translateY(-100%);
+    transition: transform 0.5s ease-in-out;
+}
+
+.navbar-border{
+    height: 12px;
 }
