--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -3,3 +3,7 @@ $main-bg-color: rgb(25, 25, 25);
 $stylizedFontSource: url(../assets/fonts/motorhead.ttf);
 $stylizedFont: Motorhead;
 $nav-link-color: white;
+
+$content-width-standard: 992px;
+
+$nav-height: 70px;
