layout stuff and refactoring

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,9 +1,13 @@
-.cover-with-playlist{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 40px;
+.home-container{
+    padding: 0 10%; //should probably be px
 }
 
-.album-cover{
-    width: 38%;
-}
+// .cover-with-playlist{
+//     display: flex;
+//     justify-content: space-between;
+//     margin-top: 40px;
+// }
+
+// .album-cover{
+//     width: 38%;
+// }
