--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -7,3 +7,6 @@ $nav-link-color: white;
 $content-width-standard: 992px;
 
 $nav-height: 70px;
+$nav-border-height: 12px;
+
+$playlist-height: 400px;
