--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,5 +1,5 @@
 .home-container{
-    padding: 0 10%; //should probably be px
+    padding: 100px 10% 0 10%; //should probably be px
 }
 
 // .cover-with-playlist{
