--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -13,7 +13,7 @@
     margin: 0 auto;
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: $content-width-standard){
     .main-container{
         width: 100%;
     }
