--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -12,3 +12,8 @@ $nav-border-height: 12px;
 $playlist-height: 400px;
 
 $standard-text-color: white;
+
+$std-container-padding-top: 150px;
+$std-container-padding-right: 10%;
+$std-container-padding-bottom: 0;
+$std-container-padding-left: 10%;
