--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -5,6 +5,7 @@ $stylizedFont: Motorhead;
 $nav-link-color: white;
 
 $content-width-standard: 992px;
+$content-width-standard-calc: 992;
 
 $nav-height: 70px;
 $nav-border-height: 12px;
