added tours list with video

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -50,4 +50,16 @@
     color: $standard-text-color;
 }
 
+.tours-home{
+    margin-top: 50px;
+}
+
+.concert-video-home{
+    margin: 5px 0;
+}
+
+.tours-list{
+    color: $standard-text-color;
+}
+
 
