--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -7,8 +7,8 @@ $nav-link-color: white;
 $content-width-standard: 992px;
 $content-width-standard-calc: 992;
 
-$nav-height: 70px;
-$nav-border-height: 12px;
+$nav-height: 80px;//70px;
+$nav-border-height: 20px;//12px;
 
 $playlist-height: 400px;
 
