added hamburger menu

--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -27,7 +27,18 @@
     text-decoration: none;
     color: $nav-link-color;
 }
-
+.hamburger-menu{
+    display: none;
+    position: absolute;
+    margin: 15px;
+    height: 50%;
+}
+.menu-visible{
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    border: 5px solid red;
+}
 .nav-logo{
     width: 150px;
 }
@@ -75,5 +86,11 @@
 @media screen and (max-width: 576px){
     .left-4, .right-4{
         display: none;
+    }
+    .nav-item{
+        display: none;
+    }
+    .hamburger-menu{
+        display: block;
     }
 }
