--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -9,6 +9,7 @@ $content-width-standard-calc: 992;
 
 $nav-height: 80px;//70px;
 $nav-border-height: 20px;//12px;
+$nav-menu-height: 500px;
 
 $playlist-height: 400px;
 
