--- a/src/scss/Mixins.scss
+++ b/src/scss/Mixins.scss
@@ -25,3 +25,13 @@
     justify-content: space-around;
     align-items: center;      
 }
+
+@mixin parallaxBg($relativePath){
+    background-image: url($relativePath);   
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-attachment: fixed;
+    width: 100%;
+    height: 641px; //calc this?    
+}
