added videos to media route

--- a/src/scss/Media.scss
+++ b/src/scss/Media.scss
@@ -13,6 +13,11 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem;
 }
+.video-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
 
 @media screen and (max-width: 768px){
     .media-grid{
@@ -24,4 +29,7 @@
     .media-grid{
         grid-template-columns: 1fr 1fr;
     }
+    .video-grid{
+        grid-template-columns: 1fr;
+    }    
 }
