--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -8,7 +8,7 @@
 
 .home-container{
     padding-top: $nav-height;
-    height: 2000px; //testing, delete
+    //height: 3000px; //testing, delete
 }
 
 .text-over-bg{
