--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -11,6 +11,8 @@
     width: 80%;
     max-width: $content-width-standard;
     margin: 0 auto;
+
+    display: flex; flex-direction: column;
 }
 
 @media screen and (max-width: $content-width-standard){
