--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -28,6 +28,24 @@
     z-index: 1; //can't be on same level with bg, flex would display them next to one another
 }
 
+// .playing-card-divider{
+//     display: flex;
+//     justify-content: center;
+//     position: absolute;
+//     z-index: 2;
+// }
+.playing-card-divider-bottom{
+    @include playingCardDivider();
+    bottom: -3%;
+}
+.playing-card-divider-top{
+    @include playingCardDivider();
+    top: -3%;        
+}
+.playing-card{
+    width: 3%;
+}
+
 //REPEATS IN secondary-backgrounds-home
 .home-header-image{ //this has a higher z-index than the nav bar would normally have... 
     //@include standardBackgroundPic("../assets/images/home-header-small.png");
@@ -65,7 +83,7 @@
 }
 
 .tours-home{
-    margin-top: 50px;
+    margin: 40px 0;
 }
 
 .tours-list{
