--- a/src/scss/Mixins.scss
+++ b/src/scss/Mixins.scss
@@ -35,3 +35,10 @@
     width: 100%;
     height: 400px; //calc this?    
 }
+
+@mixin playingCardDivider(){
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    z-index: 2;
+}
