added news article route and component

--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -22,7 +22,8 @@
 } */
 .nav-items{
     @include centeredSpaceAround(); 
-    position: relative;
+    //position: relative;
+    height: 100%;
 }
 
 .nav-item{
