--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -10,6 +10,7 @@ $content-width-standard-calc: 992;
 $nav-height: 80px;//70px;
 $nav-border-height: 20px;//12px;
 $nav-menu-height: 500px;
+$nav-z-index-without-menu: 3;
 
 $playlist-height: 400px;
 
