--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -40,7 +40,7 @@
     position: absolute;
     margin: 15px;
     height: 50%;
-    z-index: 1;
+    z-index: $nav-z-index-without-menu;//1;
 }
 .menu-visible{
     display: flex;
@@ -53,16 +53,16 @@
     padding-top: 110px + 20px; //logo height + change
     padding-bottom: 30px;
 }
-#nav-item-visible_1, #nav-item-visible_2, #nav-item-visible_3, #nav-item-visible_4 {
-    display: block;
-}
+// #nav-item-visible_1, #nav-item-visible_2, #nav-item-visible_3, #nav-item-visible_4 {
+//     display: block;
+// }
 .nav-logo{
     width: 150px;
     //when outside nav items
     position: absolute;
     top: 1px;
     left: calc(50% - 150px/2);
-    z-index: 1;
+    z-index: $nav-z-index-without-menu;//1;
 }
 
 .going-up{
@@ -81,6 +81,7 @@
     position: absolute;
     top: $nav-height - 12px;//$nav-border-height;
     width: 100%;
+    z-index: $nav-z-index-without-menu;
 }
 .lower-fang-border-wrapper{
     display: flex;
@@ -95,11 +96,11 @@
 }
 .menu-down{
     transform: translateY(0);
-    transition: transform 0.5s ease-out;//ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 .menu-up{ //the animation doesn't work
-    transform: translateY(-100%);
-    transition: transform 0.5s ease-in;//ease-in-out;
+    transform: translateY(-100% - 5%);
+    transition: transform 0.5s ease-in-out;
 }
 .display-none{
     display: none;
@@ -137,9 +138,9 @@
     .left-4, .right-4{
         display: none;
     }
-    .nav-item{
-        display: none;
-    }
+    // .nav-item{
+    //     display: none;
+    // }
     .hamburger-menu{
         display: block;
     }
@@ -155,4 +156,11 @@
     .nav-items{
         transform: translateY(0);
     }
+    .nav-border-wrapper, .lower-fang-border-wrapper{    
+        display: none;
+    }
+    // .obscure-nav-items{
+    //     background-color: $main-bg-color;
+    //     z-index: 3;
+    // }
 }
