--- a/src/components/nav/Hamburger.css
+++ b/src/components/nav/Hamburger.css
@@ -20,7 +20,7 @@ input[type="checkbox"]{
 }
 
 input[type="checkbox"]:checked ~ .hacky-navbar{
-    max-height: 200px;
+    max-height: 600px;
 }
 
 label{
@@ -35,9 +35,16 @@ label{
 
 .hacky-navbar{
     width: 100%;
-   max-height: 0;
-   height: auto;
-   overflow: hidden; 
-   transition: max-height 0.5s ease-in-out;
-   position: absolute;
+    max-height: 0;
+    height: auto;
+    overflow: hidden; 
+    transition: max-height 0.8s ease-in-out;
+    position: absolute;
+}
+
+.hacky-navbar-link-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
