--- a/src/components/nav/Navbar.css
+++ b/src/components/nav/Navbar.css
@@ -1,7 +1,27 @@
-.nav-links-and-logo{
+/* .nav-links-and-logo{ */
+
+/* .nav-inner-layout{
     width: 100%;
     display: grid;
-    grid-template-areas: "link-1 link-2 logo link-3 link-4";
+    grid-template-areas: 
+        "link-1  link-2  logo  link-3  link-4"
+        "teeth-l teeth-l logo teeth-r teeth-r"
+    ;
+} */
+
+.nav-inner-layout{
+    display: flex;
+    width: 100%;
+}
+
+.half-nav-links{
+    display: flex;
+}
+
+.half-nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .nav-link-nonmobile,
@@ -11,7 +31,7 @@
     align-items: center;
 }
 
-.nav-link-nonmobile:nth-of-type(1){
+/* .nav-link-nonmobile:nth-of-type(1){
     grid-area: link-1;
 }
 .nav-link-nonmobile:nth-of-type(2){
@@ -22,13 +42,26 @@
 }
 .nav-link-nonmobile:nth-of-type(4){
     grid-area: link-4;
-}
+} */
 
 
-.logo-wrapper{
+ .logo-wrapper{
     grid-area: logo;
 
     width: 64px;
     height: 64px;
     background-color: blue;
 }
+/*
+.left-half-upper-jaw{
+    grid-area: teeth-l;
+    justify-self: end;
+    padding: 0;
+    margin: 0;
+}
+
+.right-half-upper-jaw{
+    grid-area: teeth-r;
+    padding: 0;
+    margin: 0;
+} */
