--- a/src/components/nav/HalfJaw.scss
+++ b/src/components/nav/HalfJaw.scss
@@ -16,14 +16,6 @@
 			font-family: TeethAndFangs;
 			font-size: 4rem;
 			letter-spacing: -0.8rem;
-
-			// width: 100vh;
-			// height: 150px;
-
-            //vertical-align: bottom;
-            //position: absolute;
-            //top: 5rem;
-            //transform: translateY(5rem);
 		}
 	}
 }
@@ -32,15 +24,7 @@
 .top-right-fangs,
 .bottom-left-fangs,
 .bottom-right-fangs{
-    //display: flex;
-    // width: 100vh;
-    // height: 150px;
-    //vertical-align: bottom;
-    //position: relative;
-
-    //position: absolute;
-	
-    //top: 1rem;
+	height: 50%;
 
 
 }
@@ -53,10 +37,10 @@
 	@include pseudo-fang("f", "fb", "");
 }
 
-.bottom-left-fangs{
-    @include pseudo-fang("e", "", "g" );
+.bottom-left-fangs::before{
+    @include pseudo-fang("g", "", "cg" );
 }
 
 .bottom-right-fangs::before{
-	@include pseudo-fang("a", "ea", "");
+	@include pseudo-fang("e", "ea", "");
 }
